# Oyl-forMac

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
data/: detecw_test.cpp  new_maze.cpp  oneway_test.cpp  onlyB_syncronized.cpp  pulse_test_20250821.cpp  synchronized-2particle-loop.cpp  synchronized-test.cpp  syncronized_multi5.cpp
include/: base_element.hpp  constants.hpp  memory_class.hpp  multi_seo_class.hpp  oneway_and.hpp  oneway_unit.hpp  oneway_unit_6.hpp  particle_computation_methods.hpp  seo_class.hpp  simulation_2d.hpp
